Added GitHub link.

--- a/index.html
+++ b/index.html
@@ -52,6 +52,7 @@
 		</section>
 		<section>
 			<h2>Follow Along</h2>
+			<p><a href="http://v.gd/beyondwidgets" target="_blank">v.gd/beyondwidgets</a></p>
 			
 		</section>
 		<section>
@@ -78,7 +79,7 @@
 			<h2>The PewResearch.org homepage is made up of <strong>10 different sidebars</strong>.</h2>
 		</section>
 		<section>
-			<a href="http://www.pewresearch.org/"><img src="img/pewresearch-homepage.png"></a>
+			<a href="http://www.pewresearch.org/" target="_blank"><img src="img/pewresearch-homepage.png"></a>
 		</section>
 		<section>
 			<img src="img/10-pewresearch-sidebars.png">
@@ -96,7 +97,7 @@
 			</ul>
 		</section>
 		<section>
-			<a href="http://www.pewresearch.org/packages/lgbt-in-changing-times/"><img src="img/pewresearch-lgbt-landing-page.png"></a>
+			<a href="http://www.pewresearch.org/packages/lgbt-in-changing-times/" target="_blank"><img src="img/pewresearch-lgbt-landing-page.png"></a>
 		</section>
 		<section>
 			<h2>Widgets to the rescue?</h2>
@@ -143,7 +144,7 @@
 		</section>
 		<section>
 			<h2>Available on GitHub</h2>
-			<p><a href="#">Github URL Here</a></p>
+			<p><a href="https://github.com/kingkool68/WP-Gizmos" target="_blank">github.com/kingkool68/WP-Gizmos</a></p>
 		</section>
 		<section>
 			<h1>Questions?</h1>
