Like the maneuver...

--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
 		</section>
 		<section>
 			<h2>Hi, I'm Russell Heimlich</h2>
+			<p class="fragment"><em>(Heimlich, like the maneuver)</em></p>
 			<p class="fragment">Chief Widget Wrangler at the <a href="http://www.pewresearch.org/" target="_blank">Pew Research Center</a></p>
 		</section>
 		<section>
